Fixed layout overflow

--- a/frontend/src/app/components/banner/banner.component.scss
+++ b/frontend/src/app/components/banner/banner.component.scss
@@ -18,7 +18,7 @@
 //   }
 .banner {
   position: relative;
-  height: 80vh; /* Keeps the same height as before */
+  height: 100vh; /* Keeps the same height as before */
   display: flex;
   align-items: center;
   justify-content: center;
