--- a/frontend/src/app/components/booking-banner-form/booking-banner-form.component.scss
+++ b/frontend/src/app/components/booking-banner-form/booking-banner-form.component.scss
@@ -36,14 +36,14 @@
 
 // Contact Section
 .contact-section {
-    margin-top: 20px;
+    margin-top: 5px;
     text-align: center;
     font-size: 1em;
     color: #333; /* Neutral color for general text */
 }
 
 .contact-message {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-weight: bold;
     font-size: 1.1em; /* Slightly larger font for the message */
     color: #eef1f4; /* Primary color for emphasis */
